added service discovery to lesson service